// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="container md"
  data-testid="Button"
  type="submit"
>
  <h2>
    <span>
      Button
    </span>
  </h2>
</button>
`;

exports[`matches snapshot 2`] = `
<button
  className="container lg"
  data-testid="Button"
  type="submit"
>
  <h1>
    <span>
      Button
    </span>
  </h1>
</button>
`;

exports[`matches snapshot 3`] = `
<button
  className="container sm"
  data-testid="Button"
  type="submit"
>
  <p>
    <span>
      Button
    </span>
  </p>
</button>
`;
